--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <section id="portfolio">
         <h2>My Pictures</h2>
         <div class="portfolio-grid">
-            <div class="portfolio-item"><img src="Images/Aly1.jpeg" class="img" alt="Connect to the internet to see this image"></div>
-            <div class="portfolio-item"><img src="Images/Aly2.jpg" class="img" alt="Connect to the internet to see this image"></div>
-            <div class="portfolio-item"><img src="Images/Aly3.jpg" class="img" alt="Connect to the internet to see this image"></div>
+            <div class="portfolio-item"><img src="Aly1.jpeg" class="img" alt="Connect to the internet to see this image"></div>
+            <div class="portfolio-item"><img src="Aly2.jpg" class="img" alt="Connect to the internet to see this image"></div>
+            <div class="portfolio-item"><img src="Aly3.jpg" class="img" alt="Connect to the internet to see this image"></div>
         </div>
     </section>
 
