--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Hero Section -->
      <div class="all">
-    <section id="home" class="hero">
+    <section id="home" class="hero"><br>
         <h2>Hi, I'm Luna Marie</h2>
         <p>Hairdresser</p>
         <a href="#portfolio" class="btn">Read Details About Me</a>
@@ -48,7 +48,7 @@
         <div class="portfolio-grid">
             <div class="portfolio-item"><img src="Aly1.jpeg" class="img" alt="Connect to the internet to see this image"></div>
             <div class="portfolio-item"><img src="Aly2.jpg" class="img" alt="Connect to the internet to see this image"></div>
-            <div class="portfolio-item"><img src="Aly3.jpg" class="img" alt="Connect to the internet to see this image"></div>
+            <div class="portfolio-item"><img src="Alya.jpg" class="img" alt="Connect to the internet to see this image"></div>
         </div>
     </section>
 
@@ -73,8 +73,8 @@
     <div class="social links">
         <a href="https://wa.me/qr/BNYTKVDH6AGGD1" class="s"><i class="ri-whatsapp-fill"></i></a>
         <a href="https://t.me/Lunamarie110" class="s"><i class="ri-telegram-fill"></i></a>
-        <a href="https://www.facebook.com" class="s"><i class="ri-facebook-circle-fill"></i></a>
-        <a href="mailto:" class="s"><i class="ri-mail-fill"></i></a>
+        <a href="https://www.facebook.com/luna.marie.849832" class="s"><i class="ri-facebook-circle-fill"></i></a>
+        <a href="mailto:lunamariemilano@gmail.com" class="s"><i class="ri-mail-fill"></i></a>
     </div>
 </div>
     <footer>
