--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <p>To Know more about me, simply contact me with the following details below</p>
-        <form action="https://forms.gle/rnPyDWJFYyPJYQHb6" id="contact-form">
+        <form action="https://forms.gle/rnPyDWJFYyPJYQHb6" id="contact-form" target="_blank">
             <button type="submit">Send Message</button>
         </form>
     </section>
     <div class="social links">
-        <a href="https://wa.me/qr/BNYTKVDH6AGGD1" class="s"><i class="ri-whatsapp-fill"></i></a>
-        <a href="https://t.me/Lunamarie110" class="s"><i class="ri-telegram-fill"></i></a>
-        <a href="https://www.facebook.com/luna.marie.849832" class="s"><i class="ri-facebook-circle-fill"></i></a>
-        <a href="mailto:lunamariemilano@gmail.com" class="s"><i class="ri-mail-fill"></i></a>
+        <a href="https://wa.me/qr/BNYTKVDH6AGGD1" target="_blank" class="s"><i class="ri-whatsapp-fill"></i></a>
+        <a href="https://t.me/Lunamarie110" target="_blank" class="s"><i class="ri-telegram-fill"></i></a>
+        <a href="https://www.facebook.com/luna.marie.849832" target="_blank" class="s"><i class="ri-facebook-circle-fill"></i></a>
+        <a href="mailto:lunamariemilano@gmail.com" target="_blank" class="s"><i class="ri-mail-fill"></i></a>
     </div>
 </div>
     <footer>
